--- a/01-introduccion/src/app/shared/components/media-player/media-player.component.html
+++ b/01-introduccion/src/app/shared/components/media-player/media-player.component.html
@@ -18,7 +18,7 @@
 <!-- ZONE TEMPLATES -->
 
 <ng-template #artistZone>
-    <!-- <div class="artist-inside" *ngIf="multimediaService.trackInfo$ | async as mockCover">
+    <div class="artist-inside" *ngIf="multimediaService.trackInfo$ | async as mockCover">
 
         <img [src]="mockCover.cover" alt="" class="cover">
         <div class="track-info">
@@ -30,7 +30,7 @@
                 <i class="uil uil-heart"></i>
             </button>
         </div>
-    </div> -->
+    </div>
 </ng-template>
 
 <ng-template #playerZone>
@@ -39,25 +39,25 @@
             <button class="arrow btn">
                 <i class="uil uil-previous"></i>
             </button>
-            <!-- <button (click)="multimediaService.togglePlayer()" class="play btn">
+            <button (click)="multimediaService.togglePlayer()" class="play btn">
                 <i [ngClass]="{
                     'uil-play-circle':state === 'paused',
                     'uil-pause-circle':state !== 'paused'
                 }" class="uil "></i>
 
-            </button> -->
+            </button>
             <button class="arrow btn">
                 <i class="uil uil-step-forward"></i>
             </button>
         </div>
         <div class="media-linetime">
 
-            <!-- <div class="time">{{multimediaService.timeElapsed$ | async}}</div>
+            <div class="time">{{multimediaService.timeElapsed$ | async}}</div>
             <span #progressBar (click)="handlePosition($event)" class="time-progress">
                 <span class="time-progress-live" [style.width]="(multimediaService.playerPercentage$ | async)+'%'">
                 </span>
             </span>
-            <div class="time">{{multimediaService.timeRemaining$ | async}}</div> -->
+            <div class="time">{{multimediaService.timeRemaining$ | async}}</div>
         </div>
     </div>
 </ng-template>
